improvemen in splash screen and logo, package name

--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -10,8 +10,8 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/splash"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="232dp"
+        android:layout_height="113dp"
         android:src="@drawable/splash" />
 
 </LinearLayout>
