--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <human.anatomy.CustomWebView
+    <humans.anatomy.CustomWebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/ad_layout"
         android:visibility="gone">
 
-    </human.anatomy.CustomWebView>
+    </humans.anatomy.CustomWebView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <include layout="@layout/window" />
     <ProgressBar
