--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#4FaFFf</color>
     <color name="colorPrimaryDark">#0F7FFC</color> <!-- Used for Color of the Status Bar-->
     <color name="colorAccent">#6A6A6A</color> <!-- Used for Color of the Loading Sign and Dialogue Buttons -->
-    <color name="launchLoadingSignBackground">#000000</color> <!-- Background Color for Loading Sign Screen on launch -->
-    <color name="colorWhite">#000000</color> <!-- Background Color for Splash Screen -->
+    <color name="launchLoadingSignBackground">#1E1E1E</color> <!-- Background Color for Loading Sign Screen on launch -->
+    <color name="colorWhite">#1E1E1E</color> <!-- Background Color for Splash Screen -->
     <color name="colorTransparent">#00FFFFFF</color>
-    <color name="ic_launcher_background">#000000</color> <!-- Background Color for ic_launcher Icon -->
+    <color name="ic_launcher_background">#FFFFFF</color> <!-- Background Color for ic_launcher Icon -->
 </resources>
